# PyGSettingUtils

./: README.md  meson.build  test.py
src/: __init__.py  create-gschemas.in  errors.py  generate-gschema-files.in  info.py.in  meson.build  utils.py
tests/: example.py
